[package]
name = "adafruit_io_http"
version = "0.0.1"
authors = ["dan"]
edition = "2018"
license = "MIT"
description = "Adafruit IO http client"
documentation = "https:google.com"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

http = "0.2.1"