[package]
name = "adafruit_io_http"
version = "0.0.32"
authors = ["dan"]
edition = "2018"
license = "MIT"
description = "Adafruit IO http client"
documentation = "https://www.google.com"
repository = "https://github.com/danclan13/adafruit_io_http"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

http = "0.2.1"