[package]
name = "adafruit_io_http"
version = "0.1.0"
authors = ["danclan13"]
edition = "2018"
license = "MIT"
description = "Adafruit IO http client"
documentation = "https://github.com/danclan13/adafruit_io_http"
repository = "https://github.com/danclan13/adafruit_io_http"


[dependencies]
ureq = { version = "1.3.0", features = ["json"]}
serde_json = "1.0"